// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Share > Pinterest requestCount fails 1`] = `
Array [
  Array [
    "https://api.pinterest.com/v1/urls/count.json?cb=cb&url=https%3A%2F%2Fdemo.frontity.com%2Fthe-beauties-of-gullfoss",
  ],
  Array [
    "https://api.pinterest.com/v1/urls/count.json?cb=cb&url=https%3A%2F%2Fdemo.frontity.com%2Fthe-beauties-of-gullfoss",
  ],
]
`;

exports[`Share > Pinterest requestCount success 1`] = `
Array [
  Array [
    Object {
      "id": 60,
      "type": "post",
    },
  ],
]
`;

exports[`Share > Pinterest requestCount success 2`] = `
Array [
  Object {
    "isThrow": false,
    "value": "https://demo.frontity.com/the-beauties-of-gullfoss",
  },
]
`;

exports[`Share > Pinterest requestCount success 3`] = `
Array [
  Array [
    "https://api.pinterest.com/v1/urls/count.json?cb=cb&url=https%3A%2F%2Fdemo.frontity.com%2Fthe-beauties-of-gullfoss",
  ],
]
`;

exports[`Share > Pinterest requestCount success 4`] = `
Array [
  Object {
    "isThrow": false,
    "value": Promise {},
  },
]
`;

exports[`Share > Pinterest url 1`] = `"https://pinterest.com/pin/create/button?url=https%3A%2F%2Fdemo.frontity.com%2Fthe-beauties-of-gullfoss&media=https%3A%2F%2Fdemo.frontity.com%2Fwp-content%2Fuploads%2F2016%2F11%2FIceland-test-1200x726.jpg&description=Gullfoss%20is%20a%20waterfall%20located%20in%20the%20canyon%20of%20the%20Hv%C3%ADt%C3%A1%20river%20in%20southwest%20Iceland."`;
